Add an image for each recipe

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,6 +7,7 @@
 
     <body>
         <h1>Lasagna</h1>
+        <img src="../images/lasagne-made-in-italy.jpg" alt="Lasagna image">
         <a href="../index.html">Home</a>
     </body>
 </html>
