--- a/recipes/pancakes.html
+++ b/recipes/pancakes.html
@@ -7,6 +7,7 @@
 
     <body>
         <h1>Pancakes</h1>
+        <img src="../images/a-fork-and-knife-cutting-a-stack-of-pancakes-with-fruit.jpg" alt="pancakes image">
         <a href="../index.html">Home</a>
     </body>
 </html>
