--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -7,6 +7,7 @@
 
     <body>
         <h1>Pizza</h1>
+        <img src="../images/pizza.jpg" alt="Pizza image">
         <a href="../index.html">Home</a>
 
     </body>
